...
import com.android.harmoniatpi.ui.screens.registerScreen.ScreenTitle

@Composable
fun PreviewScreen(goToLogin: () -> Unit) {
    Column(
        modifier = Modifier
            .fillMaxSize().testTag("PREVIEW_SCREEN")
    ) {
        PreviewBackGroundHeader(
            modifier = Modifier
                .fillMaxWidth()
                .fillMaxHeight(0.50f)
        )
...
                    fontWeight = FontWeight.Medium
                )
            )

            FloatingActionButton(
                onClick = { goToLogin() },
                modifier = Modifier.size(56.dp).testTag("COMENZAR_BUTTON"),
                containerColor = MaterialTheme.colorScheme.primary,
                contentColor = MaterialTheme.colorScheme.onPrimary
            ) {
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.ArrowForward,
                    contentDescription = "Comenzar",
...
