...
) {
    NavHost(
        navController = navController,
        startDestination = BottomBarRoutes.CommunityScreenRoute
    ) {
        composable<BottomBarRoutes.CommunityScreenRoute> {
            CommunityScreen(
                onExitApp = onExitApp,
                drawerState = drawerState
            )
        }
        composable<BottomBarRoutes.RehearsalRoomRoute> {
            ProjectsScreen(
...
